--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Internet of Things DC : The business and technology of the Internet of Things in the Washington DC area" />
+    <meta name="description" content="Internet of Things DC : The business and technology of the Internet of Things in the Washington DC area." />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/IOTDC">View on GitHub</a>
 
           <h1 id="project_title">Internet of Things DC</h1>
-          <h2 id="project_tagline">The business and technology of the Internet of Things in the Washington DC area</h2>
+          <h2 id="project_tagline">The business and technology of the Internet of Things in the Washington DC area.</h2>
 
         </header>
     </div>
