Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a name="internet-of-things-dc" class="anchor" href="#internet-of-things-dc"><span class="octicon octicon-link"></span></a>Internet of Things DC</h1>
-
-<p>This repository is used to hold meetup and other materials.</p>
+        <p>This repository is used to hold meetup presentations and other materials.</p>
       </section>
     </div>
 
