--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <p>This repository is used to hold meetup presentations and other materials.</p>
+
+<p><a href="http://iotdc.github.io/Meetup-2013-August-27/">August 27, 2013 Meetup</a></p>
       </section>
     </div>
 
