Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>This repository is used to hold meetup presentations and other materials.</p>
+        <h3>
+<a name="presentations-from-meetups" class="anchor" href="#presentations-from-meetups"><span class="octicon octicon-link"></span></a>Presentations From Meetups</h3>
 
-<p><a href="http://iotdc.github.io/Meetup-2013-August-27/">August 27, 2013 Meetup</a></p>
+<ul>
+<li><a href="http://iotdc.github.io/Meetup-2013-August-27/">August 27, 2013 Meetup</a></li>
+</ul>
       </section>
     </div>
 
